// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-phone-field spec: Render logic -> should render \`placeholder\` and \`label values 1`] = `
<amplify-phone-field label="New phone *" placeholder="Enter new phone">
  <div>
    <amplify-form-field label="New phone *">
      <div class="phone-field" slot="input">
        <amplify-country-dial-code></amplify-country-dial-code>
        <amplify-input fieldid="phone" name="phone" placeholder="Enter new phone" type="tel"></amplify-input>
      </div>
    </amplify-form-field>
  </div>
</amplify-phone-field>
`;

exports[`amplify-phone-field spec: Render logic -> should render default values by default 1`] = `
<amplify-phone-field>
  <div>
    <amplify-form-field label="Phone Number *">
      <div class="phone-field" slot="input">
        <amplify-country-dial-code></amplify-country-dial-code>
        <amplify-input fieldid="phone" name="phone" placeholder="(555) 555-1212" type="tel"></amplify-input>
      </div>
    </amplify-form-field>
  </div>
</amplify-phone-field>
`;
